--- a/style.css
+++ b/style.css
@@ -2,7 +2,7 @@
 	text-align: center;
 	padding-top: 5%;
 	padding-bottom: 10%;
-	color: #FF0055
+	color: #fff
 body {
 	background: url(trees_dark_patterns_surface_textures_1920x1080_22418.jpg) no-repeat center center;
 }
